added code and notification

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     "permissions": [
       "activeTab",
       "storage",
-      "downloads"
+      "downloads",
+      "scripting"
     ],
     "background": {
       "service_worker": "background.js"
