--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,34 @@
 {
-    "manifest_version": 3,
-    "name": "Ali Downloads",
-    "version": "1.0",
-    "description": "Extension to facilitate dropshippers in downloading product data from selected sites.",
-    "permissions": [
-      "activeTab",
-      "storage",
-      "downloads",
-      "scripting"
-    ],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "icons": {
-      "16": "icons/icon_16.png",
-      "32": "icons/icon_32.png",
-      "48": "icons/icon_48.png",
-      "128": "icons/icon_128.png"
-  }
+  "manifest_version": 3,
+  "name": "Ali Downloads",
+  "version": "1.0",
+  "description": "Extension to facilitate dropshippers in downloading product data from selected sites.",
+  "permissions": [
+    "activeTab",
+    "storage",
+    "downloads",
+    "scripting",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icons/icon_16.png",
+    "32": "icons/icon_32.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["libs/jszip.min.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
-
-
-
-
-
-
-  
