--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "activeTab",
     "downloads",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -23,6 +24,17 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
+  "content_scripts": [
+    {
+        "matches": ["https://extensionpay.com/*"],
+        "js": ["ExtPay.js"],
+        "run_at": "document_start"
+    },
+    {
+        "matches": ["http://*/", "https://*/"],
+        "js": ["ExtPay.js"]
+    }
+  ],
   "web_accessible_resources": [
     {
       "resources": ["libs/jszip.min.js"],
